--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#6e0b0b0b</color>
-	<color name="colorPrimaryDark">#131313</color>
+	<color name="colorPrimary">#FF9800</color>
+	<color name="colorPrimaryDark">#607D8B</color>
 	<color name="colorAccent">#787878</color>
 	<color name="colorButtons">#6ef5f78f</color>
 </resources>
